Resolves: tdf#101433 reset RasterOpMode on cached virtual device before reuse

Change-Id: I178aa499b080b0b684d41fdd4115a6398f944c43